2005-11-18  Titus Brown  <t@issola.caltech.edu>

	* Version upgraded to 0.8.

	* Removed ez_setup hooks for the moment, because they interfered
	  with build/install.

	* Finished updating to latest mechanize code.  whew.

	* Miscellaneous fixes to browser.py.

	* Miscellaneous fixes to ClientCookie/_Util.py.

	* Added 'showhistory' command.

	* WSGI intercept stuff is now much cleaner.  Could be even cleaner,
	  yes...

	* Updated ClientForm/ClientCookie/pullparser.

2005-11-17  Titus Brown  <t@issola.caltech.edu>

	* substantially updated README with links to other tools.

	* KeyboardInterrupts don't error out in twill-sh; they just force
	  a silent exit.

	* Added a code 500 test to 'test-http-codes'.

2005-11-15  Titus Brown  <t@issola.caltech.edu>

	* Fixed failure to seek(0) before parsing response; problem
	  in _parse_html.  It broke 'back()' behavior for forms.
	  Added test-back.{py,twill}.
	
	* Test cleanup: add try: finally: around __main__ stuff, and
	  add 'initial_url' args.

	* Added 'advanced docs' section.

	* Added http_proxy documentation.

	* Fixed problems caused by failure to construct a valid
	  result object when HTTP errors (e.g. 404) happen.  Tested
	  by test-http-codes.py.

	* Added test-http-codes, cleaned up testlib a bit.

	* Fixed a stupid bug in parse.py with 'local_dict' != 'locals_dict'.

2005-11-14  Titus Brown  <t@issola.caltech.edu>

	* Added small section to README about 'nose' unit tests.

	* Cleaned up the 'myhttplib' WSGI intercept code & added a test.

2005-11-11  Titus Brown  <t@issola.caltech.edu>

	* Downgraded 0.8 version to 0.7.4.  RELEASE.

2005-11-10  Titus Brown  <t@issola.caltech.edu>

	* Moved 'test/' to 'tests/', added 'test-multisub.py',
	  moved 'twillserver.py' to 'twilltestserver.py', and fixed
	  it to run simple_server when executed from the command line.

	* Fixed two form submission bugs, pointed out by Mike Rovner.

2005-11-09  Titus Brown  <t@issola.caltech.edu>
